# tools-syskit

./: .gitignore  .rubocop.yml  .rubocop_todo.yml  .simplecov  .yardopts  CMakeLists.txt  History.txt  Manifest.txt  README.md  README.rd  README.txt  Rakefile  TODO.md  Upgrading.md  bla.txt  corba_access.cc  corba_access.hh  main.cpp  manifest.xml  q  syskit.gemspec
cmake/: Syskit.cmake  syskit-config.cmake
doc/guide/: config.yaml
doc/misc/: update_github
generators/bus/: USAGE  bus_generator.rb
generators/cmp/: USAGE  cmp_generator.rb
generators/dev/: USAGE  dev_generator.rb
generators/orogen/: USAGE  orogen_generator.rb
generators/orogenconf/: USAGE  orogenconf_generator.rb
generators/profile/: USAGE  profile_generator.rb
generators/ruby_task/: USAGE  ruby_task_generator.rb
generators/srv/: USAGE  srv_generator.rb
lib/: syskit.rb  yard-syskit.rb
lib/syskit/: abstract_component.rb  abstract_placeholders.rb  actions.rb  actual_data_flow_graph.rb  app.rb  backward.rb  base.rb  bound_data_service.rb  component.rb  composition.rb  compositions.rb  connection_graph.rb  connection_graphs.rb  coordination.rb  custom_require.rb  data_flow.rb  data_service.rb  data_services.rb  data_sources.rb  dataflow_computation.rb  dataflow_dynamics.rb  dependency_injection.rb  dependency_injection_context.rb  deployment.rb  dynamic_data_source.rb  dynamic_port_binding.rb  engine.rb  exceptions.rb  graphviz.rb  instance_requirements.rb  instance_requirements_task.rb  instance_spec.rb  (+37 more)
roby/: app.rb  roby-orocos.rb
test/: common.rb  suite.rb  suite_actions.rb  suite_coordination.rb  suite_droby.rb  suite_models.rb  suite_network_generation.rb  suite_robot.rb  suite_roby_app.rb  suite_ros.rb  suite_runtime.rb  test_abstract_placeholders.rb  test_bound_data_service.rb  test_component.rb  test_composition.rb  test_connection_graph.rb  test_connection_graphs.rb  test_data_flow.rb  test_data_service.rb  test_data_services.rb  test_data_sources.rb  test_dependency_injection.rb  test_dependency_injection_context.rb  test_deployment.rb  test_dynamic_data_source.rb  test_dynamic_port_binding.rb  test_engine.rb  test_exceptions.rb  test_gui_logging_configuration.rb  test_helper.rb  test_instance_requirements.rb  test_instance_requirements_task.rb  test_instance_selection.rb  test_instance_spec.rb  test_models.rb  test_network_merge_solver.rb  test_orogen_namespace.rb  test_placeholder.rb  test_port.rb  test_properties.rb  (+14 more)
(+463 files in other folders)
